--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,19 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+  </style>
+
+  <style>
+    @media (min-width: 1440px) {
+      .custom-1440\:grid-cols-4 {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+      }
+    }
+  </style>
+
   <style type="text/tailwindcss">
     @theme {
         --color-clifford: #da373d;
